# ai-qa-assistant

./: .env.example  .gitignore  README.md  check-sync.sh  pyproject.toml
.spec/: product.md  structure.md  tech.md
docs/: AI_QA_Assistant.pptx
examples/: multiple-user-stories.txt
reports/: report_01.md  report_02.md  report_03.md
scripts/: run_and_save_reports.py
src/: __init__.py
src/ai_qa_assistant/: __init__.py  app.py  config.py  graph.py  llm.py  prompts.py  state.py  tools.py
src/ai_qa_assistant/nodes/: __init__.py  analyze_story.py  build_report.py  generate_acceptance.py  generate_test_cases.py  identify_risks.py  load_checklist.py  validate_input.py
src/docs/: checklist_qa.md
