[project]
name = "ai-qa-assistant"
version = "0.1.0"
description = "AI agent for QA requirements analysis using LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "python-dotenv",
    "pydantic",
]

[project.scripts]
ai-qa-assistant = "src.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"